--- a/app/globals.css
+++ b/app/globals.css
@@ -25,6 +25,19 @@
     @apply border-foreground/20;
     @apply box-border;
   }
+
+  /* Remove arrow from input[type="number"] */
+  /* Chrome, Safari, Edge, Opera */
+  input::-webkit-outer-spin-button,
+  input::-webkit-inner-spin-button {
+    -webkit-appearance: none;
+    margin: 0;
+  }
+
+  /* Firefox */
+  input[type="number"] {
+    -moz-appearance: textfield;
+  }
 }
 
 .animate-in {
